Attempted fix IOS jumping pinned sections

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,4 +1,9 @@
 /* Global Styles */
+html, 
+body{
+    overflow-x: hidden;
+}
+
 // Sections
 .overflow-hidden{
     overflow:hidden!important;
